--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -20,6 +20,7 @@
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
     "@radix-ui/react-dropdown-menu": "1.0.0",
+    "@radix-ui/react-select": "1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "1.0.0",
     "@sentry/nextjs": "7.13.0",
