--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -36,11 +36,13 @@
     "localforage": "1.10.0",
     "next": "12.3.1",
     "next-pwa": "5.6.0",
+    "next-transpile-modules": "9.0.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shared-components": "*",
     "sharp": "0.31.0",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
