--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -22,6 +22,7 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
+    "@radix-ui/react-tabs": "1.0.0",
     "@radix-ui/react-toggle": "1.0.0",
     "@sentry/nextjs": "7.13.0",
     "@socialgouv/matomo-next": "1.4.0",
