--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -34,10 +34,10 @@
     }
   ],
   "peerDependencies": {
-    "@klicker-uzh/grading": "^2.0.0-alpha.0",
-    "@klicker-uzh/prisma": "^2.0.0-alpha.0",
+    "@envelop/response-cache": "^3.2.0",
     "@graphql-yoga/node": "^2.13.13",
-    "@envelop/response-cache": "^3.2.0"
+    "@klicker-uzh/grading": "^2.0.0-alpha.0",
+    "@klicker-uzh/prisma": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
@@ -75,6 +75,7 @@
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.18.0",
+    "mathjs": "11.2.1",
     "nexus": "1.3.0",
     "validator": "13.7.0"
   },
