enhance(deploy): dynamic cron schedules in chart

--- a/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
@@ -5,8 +5,7 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  # schedule: "5 6,19 * * *"
-  schedule: "* * * * *"
+  schedule: {{ .Values.cron.dailyGroupScores }}
   jobTemplate:
     spec:
       template:
