--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -8,6 +8,9 @@ podSecurityContext: {}
 
 securityContext: {}
 
+cron:
+  dailyGroupScores: "* * * * *"
+
 frontendPWA:
   priorityClassName: production-workload
 
