--- a/deploy/env-prod-v2/values.yaml
+++ b/deploy/env-prod-v2/values.yaml
@@ -1,6 +1,9 @@
 heartbeats:
   dailyGroupScores: https://betteruptime.com/api/v1/heartbeat/gmMi315s2532oozauJa18ckx
 
+cron:
+  dailyGroupScores: "5 6,20 * * *"
+
 frontendPWA:
   autoscaling:
     enabled: false
