--- a/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  schedule: {{ .Values.cron.dailyGroupScores }}
+  schedule: {{ .Values.cron.dailyGroupScores | quote }}
   jobTemplate:
     spec:
       template:
