--- a/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-daily-group-scores.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "chart.fullname" . }}-cron-daily-group-scores
+  name: {{ include "chart.fullname" . }}-cron-group-scores
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
