wip: add markdown editor including corresponding conversions with some bugs to be resolved

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -30,6 +30,7 @@
     "formik": "2.2.9",
     "graphql": "16.6.0",
     "graphql-ws": "5.11.2",
+    "is-hotkey": "0.2.0",
     "js-search": "2.0.0",
     "localforage": "1.10.0",
     "lodash": "4.17.21",
@@ -46,8 +47,12 @@
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
     "recharts": "2.1.12",
+    "remark-slate": "1.8.6",
     "shared-components": "*",
     "sharp": "0.31.0",
+    "slate": "0.82.1",
+    "slate-history": "0.66.0",
+    "slate-react": "0.83.1",
     "tailwind-merge": "1.6.0",
     "yup": "0.32.11"
   },
