--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@uzh-bf/design-system": "0.0.58",
+    "@uzh-bf/design-system": "0.0.59",
     "dayjs": "1.11.5",
     "ramda": "0.28.0",
     "react": "18.2.0",
@@ -18,5 +18,8 @@
     "tailwindcss": "3.1.8",
     "typescript": "4.8.3",
     "yup": "0.32.11"
+  },
+  "volta": {
+    "extends": "../../package.json"
   }
 }
