--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -8,6 +8,10 @@
     "build": "tailwindcss -i src/globals.css -o src/tailwind.css"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.7",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@uzh-bf/design-system": "0.0.58",
