chore(packages/prisma): update seed commands

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,15 +21,17 @@
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
+    "seed": "npm-run-all seed:bf1 seed:ami seed:test",
     "seed:test": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:prod": "npm-run-all seed:bf1 seed:ami",
     "seed:prod:bf1": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:prod:ami": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
     "size": "size-limit"
   },
   "prisma": {
-    "seed": "npm-run-all seed:bf1 seed:ami seed:test"
+    "seed": "npm run seed"
   },
   "engines": {
     "node": "=18"
