--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,6 +21,7 @@
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
+    "preseed": "npm run build:all",
     "seed": "npm-run-all seed:bf1 seed:ami seed:test",
     "seed:test": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
