--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "3.6.9",
+    "@apollo/client": "3.7.0",
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-regular-svg-icons": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
@@ -19,9 +19,9 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
-    "@radix-ui/react-dropdown-menu": "1.0.0",
-    "@radix-ui/react-select": "1.0.0",
-    "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "2.0.1",
+    "@radix-ui/react-select": "1.1.1",
+    "@radix-ui/react-tabs": "1.0.1",
     "@sentry/nextjs": "7.13.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.60",
@@ -46,14 +46,14 @@
     "react-qrcode-logo": "2.8.0",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
-    "recharts": "2.1.12",
+    "recharts": "2.1.15",
     "remark-slate": "1.8.6",
     "shared-components": "*",
     "sharp": "0.31.0",
     "slate": "0.82.1",
     "slate-history": "0.66.0",
     "slate-react": "0.83.1",
-    "tailwind-merge": "1.6.0",
+    "tailwind-merge": "1.6.2",
     "yup": "0.32.11"
   },
   "devDependencies": {
@@ -62,7 +62,7 @@
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.7",
     "@types/d3": "^7.4.0",
-    "@types/js-search": "1.4.0",
+    "@types/js-search": "^1.4.0",
     "@types/lodash": "^4.14.185",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
@@ -78,7 +78,7 @@
     "prettier-plugin-organize-imports": "3.1.1",
     "tailwindcss": "3.1.8",
     "tailwindcss-radix": "2.6.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.4"
   },
   "volta": {
     "extends": "../../package.json"
