--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -13,7 +13,7 @@
     "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts"
   },
   "dependencies": {
-    "@apollo/client": "3.6.9",
+    "@apollo/client": "3.7.0",
     "@bigheads/core": "0.3.3",
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-regular-svg-icons": "6.2.0",
@@ -22,12 +22,12 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
-    "@radix-ui/react-tabs": "1.0.0",
-    "@radix-ui/react-toggle": "1.0.0",
-    "@sentry/nextjs": "7.13.0",
+    "@radix-ui/react-tabs": "1.0.1",
+    "@radix-ui/react-toggle": "1.0.1",
+    "@sentry/nextjs": "7.15.0",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.0.60",
-    "body-parser": "1.20.0",
+    "body-parser": "1.20.1",
     "dayjs": "1.11.5",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
@@ -37,7 +37,7 @@
     "localforage": "1.10.0",
     "next": "12.3.1",
     "next-pwa": "5.6.0",
-    "next-transpile-modules": "9.0.0",
+    "next-transpile-modules": "9.1.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
     "ramda": "0.28.0",
@@ -45,7 +45,7 @@
     "react-dom": "18.2.0",
     "shared-components": "*",
     "sharp": "0.31.0",
-    "tailwind-merge": "1.6.0",
+    "tailwind-merge": "1.6.2",
     "yup": "0.32.11"
   },
   "devDependencies": {
@@ -56,7 +56,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
-    "@types/object-hash": "2.2.1",
+    "@types/object-hash": "^2.2.1",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -71,7 +71,7 @@
     "tailwindcss": "3.1.8",
     "tailwindcss-radix": "2.6.0",
     "ts-node": "10.9.1",
-    "typescript": "4.8.3",
+    "typescript": "4.8.4",
     "web-push": "3.5.0"
   },
   "volta": {
