--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -29,12 +29,12 @@
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/jest": "^29.0.2",
-    "@types/ramda": "0.28.15",
+    "@types/ramda": "^0.28.15",
     "jest": "29.0.3",
     "size-limit": "8.1.0",
     "ts-jest": "29.0.1",
     "tsup": "6.2.3",
-    "typescript": "4.8.3"
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "ramda": "0.28.0"
