--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "turbo": "1.4.6",
     "yaml": "2.1.1"
   },
+  "dependencies": {
+    "@prisma/client": "4.5.0",
+    "prisma": "4.5.0"
+  },
   "volta": {
     "node": "18.11.0"
   },
