--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -52,7 +52,7 @@
     "@types/ramda": "^0.28.15",
     "bcryptjs": "2.4.3",
     "npm-run-all": "4.1.5",
-    "prisma": "4.4.0",
+    "prisma": "4.5.0",
     "prisma-erd-generator": "1.2.0",
     "ramda": "0.28.0",
     "size-limit": "8.1.0",
@@ -61,7 +61,7 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@prisma/client": "4.4.0"
+    "@prisma/client": "^4.5.0"
   },
   "volta": {
     "extends": "../../package.json"
