--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -54,7 +54,7 @@
     "slate-history": "0.66.0",
     "slate-react": "0.83.1",
     "tailwind-merge": "1.6.2",
-    "yup": "0.32.11"
+    "yup": "v1.0.0-beta.7"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
