--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     "turbo": "1.4.6",
     "yaml": "2.1.1"
   },
+  "dependencies": {
+    "@prisma/client": "4.5.0",
+    "prisma": "4.5.0"
+  },
   "volta": {
-    "node": "18.8.0"
+    "node": "18.11.0"
   },
   "packageManager": "npm@8.15.0",
   "engines": {
