--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,6 +21,7 @@
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
+    "preseed": "npm run build:all",
     "seed": "npm-run-all seed:bf1 seed:ami seed:test",
     "seed:test": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
@@ -51,16 +52,16 @@
     "@types/ramda": "^0.28.15",
     "bcryptjs": "2.4.3",
     "npm-run-all": "4.1.5",
-    "prisma": "4.3.1",
+    "prisma": "4.5.0",
     "prisma-erd-generator": "1.2.0",
     "ramda": "0.28.0",
     "size-limit": "8.1.0",
     "ts-node": "10.9.1",
     "tsup": "6.2.3",
-    "typescript": "4.8.3"
+    "typescript": "4.8.4"
   },
   "dependencies": {
-    "@prisma/client": "4.3.1"
+    "@prisma/client": "^4.5.0"
   },
   "volta": {
     "extends": "../../package.json"
