--- a/.github/workflows/v2_frontend-pwa-docker-prod.yml
+++ b/.github/workflows/v2_frontend-pwa-docker-prod.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Prepare filesystem
+        shell: bash
+        run: |
+          cp -R packages/shared-components apps/frontend-pwa/shared-components
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
