--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,10 +9,13 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build:all": "npm-run-all generate build build:hive",
+    "prebuild": "npm run generate",
     "build": "NODE_ENV=production tsup --dts",
-    "build:hive": "hive schema:publish src/graphql/schema.graphql",
-    "dev": "NODE_ENV=development tsup --watch --dts",
+    "hive": "hive schema:publish src/graphql/schema.graphql",
+    "dev": "npm-run-all --parallel dev:nexus dev:graphql dev:ts",
+    "dev:ts": "NODE_ENV=development tsup --watch --dts",
+    "dev:graphql": "graphql-codegen --config codegen.yml --watch",
+    "dev:nexus": "ts-node-dev --transpile-only --no-notify -P tsconfig.nexus.json src/index.ts",
     "format": "prettier --write .",
     "generate": "npm-run-all generate:nexus generate:graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
@@ -65,6 +68,8 @@
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
     "size-limit": "8.1.0",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
     "tsup": "6.2.3",
     "typescript": "4.8.4",
     "web-push": "3.5.0"
