--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -14,7 +14,7 @@
     "build": "dts build --entry GraphQL/index.ts",
     "lint": "dts lint",
     "size": "size-limit",
-    "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
+    "dev:old": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
     "dev:dts": "dts watch --entry GraphQL/index.ts",
     "dev:func": "func start",
     "format": "prettier --write .",
