--- a/apps/backend-response-processor/local.settings.json.template
+++ b/apps/backend-response-processor/local.settings.json.template
@@ -6,8 +6,10 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
-    "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": "dev"
+    "APP_SECRET": "abcd",
+    "REDIS_HOST": "localhost",
+    "REDIS_PORT": 6379,
+    "ServiceBusConnectionString": ""
   },
   "Host": {
     "CORS": "http://127.0.0.1:3001",
