--- a/.github/workflows/v2_klickeruzhprod-response-processor(qa).yml
+++ b/.github/workflows/v2_klickeruzhprod-response-processor(qa).yml
@@ -1,16 +1,16 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js project to Azure Function App - klickeruzhprod-response-processor
+name: Build and deploy backend-responses to Azure Function App (QA)
 
 on:
   push:
     branches:
-      - v2
+      - "v2"
+    paths:
+      - "apps/backend-responses/**"
+      - ".github/workflows/v2_klickeruzhprod-responses**"
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -28,17 +28,19 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
+          rm package.json
+          rm package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install
+          npm install --package-lock=false
           npm run build --if-present
-          npm run test --if-present
+          npm prune --omit=dev
           popd
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'klickeruzhprod-response-processor'
+          app-name: 'klickeruzhprod-responses'
           slot-name: 'qa'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_36EB12B3E64C4803BA587F03A5F2E446 }}
