enhance: improve response queue logic

--- a/apps/backend-responses/local.settings.json.template
+++ b/apps/backend-responses/local.settings.json.template
@@ -1,6 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "APP_SECRET": "abcd",
     "NODE_ENV": "development",
     "AzureWebJobsStorage": "",
     "FUNCTIONS_WORKER_RUNTIME": "node",
