--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -21,21 +21,14 @@
   },
   "dependencies": {
     "@azure/service-bus": "7.7.2",
-    "@klicker-uzh/grading": "^2.0.0-alpha.23",
-    "ioredis": "5.2.3",
-    "jsonwebtoken": "8.5.1",
-    "md5": "2.3.0",
-    "ramda": "0.28.0"
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@azure/functions": "3.2.0",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
-    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/md5": "2.3.2",
     "@types/node": "^18.0.0",
-    "@types/ramda": "^0.28.15",
     "@types/supertest": "^2.0.12",
     "@uzh-bf/design-system": "0.0.61",
     "dotenv": "16.0.2",
