--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@klicker-uzh/grading": "^2.0.0-alpha.23",
     "ioredis": "5.2.3",
+    "jsonwebtoken": "8.5.1",
     "md5": "2.3.0",
     "ramda": "0.28.0"
   },
@@ -30,6 +31,7 @@
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/md5": "2.3.2",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
