fix(apps/backend-response-processor): add app setting binding for dynamic queue name

--- a/apps/backend-response-processor/local.settings.json.template
+++ b/apps/backend-response-processor/local.settings.json.template
@@ -9,7 +9,8 @@
     "APP_SECRET": "abcd",
     "REDIS_HOST": "localhost",
     "REDIS_PORT": 6379,
-    "ServiceBusConnectionString": ""
+    "SERVICE_BUS_CONNECTION_STRING": "",
+    "SERVICE_BUS_QUEUE_NAME": "dev"
   },
   "Host": {
     "CORS": "http://127.0.0.1:3001",
