chore(packages/prisma): update prisma interactions to enforce correct .env files per environment

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -18,17 +18,26 @@
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma",
     "prisma:deploy": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:deploy:qa": "dotenv -e .env.qa -- npm run prisma:deploy",
+    "prisma:deploy:prod": "dotenv -e .env.production -- npm run prisma:deploy",
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
+    "prisma:push:qa": "dotenv -e .env.qa -- npm run prisma:push",
     "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma",
+    "prisma:reset:qa": "dotenv -e .env.qa -- npm run prisma:reset",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
+    "prisma:studio:qa": "dotenv -e .env.qa -- npm run prisma:studio",
+    "prisma:studio:prod": "dotenv -e .env.production -- npm run prisma:studio",
     "preseed": "npm run build:all",
     "seed": "npm-run-all seed:bf1 seed:ami seed:test",
-    "seed:test": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
-    "seed:bf1": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
-    "seed:ami": "ENV=development ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
+    "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
+    "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:qa": "npm-run-all seed:qa:bf1 seed:qa:ami",
+    "seed:qa:bf1": "ENV=production ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts dotenv_config_path=.env.qa",
+    "seed:qa:ami": "ENV=production ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts dotenv_config_path=.env.qa",
     "seed:prod": "npm-run-all seed:prod:bf1 seed:prod:ami",
-    "seed:prod:bf1": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
-    "seed:prod:ami": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:prod:bf1": "ENV=production npm run seed:qa:bf1 -- dotenv_config_path=.env.production",
+    "seed:prod:ami": "ENV=production npm run seed:qa:ami -- dotenv_config_path=.env.production",
     "size": "size-limit"
   },
   "prisma": {
@@ -51,6 +60,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/ramda": "^0.28.15",
     "bcryptjs": "2.4.3",
+    "dotenv": "16.0.3",
+    "dotenv-cli": "6.0.0",
     "npm-run-all": "4.1.5",
     "prisma": "4.5.0",
     "prisma-erd-generator": "1.2.0",
