--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -3,18 +3,18 @@
   "name": "@klicker-uzh/backend-response-processor",
   "version": "2.0.0-alpha.69",
   "license": "AGPL-3.0",
-  "main": "dist/index.js",
-  "module": "dist/backend-response-processor.esm.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/ProcessResponses/process.js",
+  "module": "dist/ProcessResponses/process.esm.js",
+  "typings": "dist/process.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "dts build --entry ProcessResponses/index.ts",
+    "build": "dts build --entry ProcessResponses/process.ts --entry Ping/ping.ts",
     "lint": "dts lint",
     "size": "size-limit",
     "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
-    "dev:dts": "dts watch --entry ProcessResponses/index.ts",
+    "dev:dts": "dts watch --entry ProcessResponses/index.ts --entry Ping/ping.ts",
     "dev:func": "func start -p 7073",
     "format": "prettier --write .",
     "test": "dts test"
