--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -3,21 +3,17 @@
   "name": "@klicker-uzh/backend-response-processor",
   "version": "2.0.0-alpha.69",
   "license": "AGPL-3.0",
-  "main": "dist/ProcessResponses/process.js",
-  "module": "dist/ProcessResponses/process.esm.js",
-  "typings": "dist/process.d.ts",
+  "main": "dist/ProcessResponses/index.js",
+  "typings": "dist/ProcessResponses/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "dts build --entry ProcessResponses/process.ts --entry Ping/ping.ts",
-    "lint": "dts lint",
-    "size": "size-limit",
-    "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
-    "dev:dts": "dts watch --entry ProcessResponses/index.ts --entry Ping/ping.ts",
+    "build": "NODE_ENV=production tsup",
+    "dev": "NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "NODE_ENV=development tsup --watch",
     "dev:func": "func start -p 7073",
-    "format": "prettier --write .",
-    "test": "dts test"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@klicker-uzh/grading": "^2.0.0-alpha.23",
@@ -30,25 +26,19 @@
     "@azure/functions": "3.2.0",
     "@tsconfig/node18": "1.0.1",
     "@tsconfig/recommended": "1.0.1",
-    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/md5": "2.3.2",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
-    "@types/supertest": "^2.0.12",
     "@uzh-bf/design-system": "0.0.61",
     "dotenv": "16.0.2",
-    "dts-cli": "1.6.0",
     "husky": "8.0.1",
-    "jest": "29.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
-    "size-limit": "8.1.0",
-    "supertest": "6.2.4",
-    "ts-jest": "29.0.1",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
+    "tsup": "6.2.3",
     "typescript": "4.8.4"
   },
   "volta": {
