--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -4,20 +4,16 @@
   "version": "2.0.0-alpha.69",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
-  "module": "dist/backend-responses.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "dts build --entry AddResponse/index.ts",
-    "lint": "dts lint",
-    "size": "size-limit",
-    "dev": "NODE_ENV=development npm-run-all --parallel dev:dts dev:func",
-    "dev:dts": "dts watch --entry AddResponse/index.ts",
+    "build": "NODE_ENV=production tsup",
+    "dev": "NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "NODE_ENV=development tsup --watch",
     "dev:func": "func start -p 7072",
-    "format": "prettier --write .",
-    "test": "dts test"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@azure/service-bus": "7.7.2",
@@ -29,18 +25,11 @@
     "@tsconfig/recommended": "1.0.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
-    "@types/supertest": "^2.0.12",
     "@uzh-bf/design-system": "0.0.61",
-    "dotenv": "16.0.2",
-    "dts-cli": "1.6.0",
     "husky": "8.0.1",
-    "jest": "29.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
-    "size-limit": "8.1.0",
-    "supertest": "6.2.4",
-    "ts-jest": "29.0.1",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "typescript": "4.8.4"
