--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -9,9 +9,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "NODE_ENV=production tsup",
-    "dev": "NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
-    "dev:ts": "NODE_ENV=development tsup --watch",
+    "build": "cross-env NODE_ENV=production tsup",
+    "dev": "cross-env NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "dev:func": "func start -p 7073",
     "format": "prettier --write ."
   },
@@ -31,6 +31,7 @@
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
     "@uzh-bf/design-system": "0.0.61",
+    "cross-env": "7.0.3",
     "dotenv": "16.0.2",
     "husky": "8.0.1",
     "npm-run-all": "4.1.5",
