--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -9,9 +9,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "NODE_ENV=production tsup",
-    "dev": "NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
-    "dev:ts": "NODE_ENV=development tsup --watch",
+    "build": "cross-env NODE_ENV=production tsup",
+    "dev": "cross-env NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "dev:func": "func start -p 7072",
     "format": "prettier --write ."
   },
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
     "@uzh-bf/design-system": "0.0.61",
+    "cross-env": "7.0.3",
     "husky": "8.0.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
