chore(apps/backend-response-processor): remove ping function

--- a/apps/backend-response-processor/tsconfig.json
+++ b/apps/backend-response-processor/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["Ping", "ProcessResponses"],
+  "include": ["ProcessResponses"],
   "compilerOptions": {
     "module": "ESNext"
   }
