--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -3,6 +3,8 @@
   "name": "@klicker-uzh/backend-response-processor",
   "version": "2.0.0-alpha.71",
   "license": "AGPL-3.0",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
