--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -32,12 +32,12 @@
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
-    "seed:qa": "npm-run-all seed:qa:bf1 seed:qa:ami",
-    "seed:qa:bf1": "ENV=production ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts dotenv_config_path=.env.qa",
-    "seed:qa:ami": "ENV=production ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts dotenv_config_path=.env.qa",
-    "seed:prod": "npm-run-all seed:prod:bf1 seed:prod:ami",
-    "seed:prod:bf1": "ENV=production npm run seed:qa:bf1 -- dotenv_config_path=.env.production",
-    "seed:prod:ami": "ENV=production npm run seed:qa:ami -- dotenv_config_path=.env.production",
+    "seed:qa": "ENV=development npm-run-all seed:qa:bf1 seed:qa:ami",
+    "seed:qa:bf1": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts dotenv_config_path=.env.qa",
+    "seed:qa:ami": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts dotenv_config_path=.env.qa",
+    "seed:prod": "ENV=production npm-run-all seed:prod:bf1 seed:prod:ami",
+    "seed:prod:bf1": "npm run seed:qa:bf1 -- dotenv_config_path=.env.production",
+    "seed:prod:ami": "npm run seed:qa:ami -- dotenv_config_path=.env.production",
     "size": "size-limit"
   },
   "prisma": {
