--- a/.github/workflows/v2_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v2_klickeruzhprod-response-processor.yml
@@ -1,12 +1,16 @@
-name: Build and deploy backend-response-processor to Azure Function App (Production)
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js project to Azure Function App - klickeruzhprod-response-processor
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    branches:
+      - v2
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-response-processor' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -24,12 +28,10 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          rm package.json
-          rm package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install --package-lock=false
+          npm install
           npm run build --if-present
-          npm prune --omit=dev
+          npm run test --if-present
           popd
 
       - name: 'Run Azure Functions Action'
@@ -39,4 +41,4 @@ jobs:
           app-name: 'klickeruzhprod-response-processor'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_34D9A98CDB984797838066ADF096A6FE }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2D29422CC7724D749B4FE2DB880C2E19 }}
