--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -35,7 +35,7 @@
     "localforage": "1.10.0",
     "lodash": "4.17.21",
     "next": "12.3.1",
-    "next-transpile-modules": "9.0.0",
+    "next-transpile-modules": "9.1.0",
     "nookies": "2.5.2",
     "ramda": "0.28.0",
     "react": "18.2.0",
@@ -49,11 +49,11 @@
     "recharts": "2.1.15",
     "remark-slate": "1.8.6",
     "shared-components": "*",
-    "sharp": "0.31.0",
-    "slate": "0.82.1",
+    "sharp": "0.31.1",
+    "slate": "0.84.0",
     "slate-history": "0.66.0",
-    "slate-react": "0.83.1",
-    "tailwind-merge": "1.6.2",
+    "slate-react": "0.83.2",
+    "tailwind-merge": "1.7.0",
     "yup": "v1.0.0-beta.7"
   },
   "devDependencies": {
@@ -69,15 +69,15 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-tagcloud": "^1.1.7",
-    "@types/sharp": "^0.30.5",
-    "autoprefixer": "10.4.10",
-    "eslint": "8.23.1",
+    "@types/sharp": "^0.31.0",
+    "autoprefixer": "10.4.12",
+    "dayjs": "1.11.6",
     "eslint-config-next": "12.3.1",
-    "postcss": "8.4.16",
+    "postcss": "8.4.18",
     "prettier": "2.7.1",
     "prettier-plugin-organize-imports": "3.1.1",
-    "tailwindcss": "3.1.8",
-    "tailwindcss-radix": "2.6.0",
+    "tailwindcss": "3.2.1",
+    "tailwindcss-radix": "2.6.1",
     "typescript": "4.8.4"
   },
   "volta": {
