--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@klicker-uzh/grading": "^2.0.0-alpha.23",
+    "@sentry/node": "7.16.0",
     "ioredis": "5.2.3",
     "jsonwebtoken": "8.5.1",
     "md5": "2.3.0",
