--- a/apps/frontend-manage/.env.development
+++ b/apps/frontend-manage/.env.development
@@ -3,5 +3,6 @@ API_DOMAIN=$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-uzh-dev/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
+NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="http://127.0.0.1:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=$NEXT_PUBLIC_API_URL
