--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -58,6 +58,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
+    "@types/node-schedule": "^2.1.0",
     "@types/validator": "^13.7.5",
     "@types/web-push": "^3.3.2",
     "dotenv": "16.0.3",
@@ -82,6 +83,7 @@
     "graphql-scalars": "1.20.0",
     "mathjs": "11.3.1",
     "nexus": "1.3.0",
+    "node-schedule": "2.1.0",
     "validator": "13.7.0"
   },
   "volta": {
