chore: seed update

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -32,7 +32,7 @@
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
-    "seed:qa": "ENV=development npm-run-all seed:qa:bf1 seed:qa:ami",
+    "seed:qa": "ENV=production npm-run-all seed:qa:bf1 seed:qa:ami",
     "seed:qa:bf1": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts dotenv_config_path=.env.qa",
     "seed:qa:ami": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts dotenv_config_path=.env.qa",
     "seed:prod": "ENV=production npm-run-all seed:prod:bf1 seed:prod:ami",
