chore: update local settings files with new queue name

--- a/apps/backend-response-processor/local.settings.json.template
+++ b/apps/backend-response-processor/local.settings.json.template
@@ -10,7 +10,7 @@
     "REDIS_HOST": "localhost",
     "REDIS_PORT": 6379,
     "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": "dev"
+    "SERVICE_BUS_QUEUE_NAME": "q-dev"
   },
   "Host": {
     "CORS": "http://127.0.0.1:3001",
