--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -43,6 +43,7 @@
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.0",
     "react-qrcode-logo": "2.8.0",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
