enhance: basic live session creation form (#3002)
* wip: create tabs and basic form for live session creation

* wip: replace text field by more elaborate component

* chore: replace TextField component with pendant from design-system

* chore: removed unused logging

* Merge branch 'v2' of https://github.com/uzh-bf/klicker-uzh into BasicSessionCreation

* wip: replace blocks mapping with suitable field array

* enhance: add create session functionality and fetch courses on question pool overview

* fix: add missing order attribute to blocks during creation of live session

* wip: handle issues where the provided questions do not exist in the users question pool

* fix: session list should not require session for course

* chore: remove unused logging

* enhance: automatic redirect on session creation

* enhance: add timeLimits for blocks through form

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-tabs": "1.0.1",
     "@sentry/nextjs": "7.13.0",
     "@socialgouv/matomo-next": "1.4.0",
-    "@uzh-bf/design-system": "0.0.64",
+    "@uzh-bf/design-system": "0.0.67",
     "d3": "7.6.1",
     "deepmerge": "4.2.2",
     "formik": "2.2.9",
@@ -43,6 +43,7 @@
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.0",
     "react-qrcode-logo": "2.8.0",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
