--- a/deploy/env-prod/values.yaml
+++ b/deploy/env-prod/values.yaml
@@ -29,7 +29,8 @@ redis:
 analytics:
   sentry:
     frontend:
-      enabled: true
+      environment: prod
+    backend:
       environment: prod
   google:
     trackingId:
