chore(deploy): extend chart for backend sentry integration

--- a/deploy/charts/klicker-uzh/templates/secret-backend.yaml
+++ b/deploy/charts/klicker-uzh/templates/secret-backend.yaml
@@ -16,3 +16,6 @@ stringData:
   {{- if .Values.backend.redis }}
   EXEC_REDIS_PASSWORD: {{ .Values.backend.redis.password | quote }}
   {{ end }}
+  {{- if .Values.analytics.sentry.backend.enabled }}
+  SENTRY_AUTH_TOKEN: {{ .Values.analytics.sentry.backend.authToken | quote }}
+  {{ end }}
