--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -19,6 +19,7 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
+    "@radix-ui/react-collapsible": "1.0.1",
     "@radix-ui/react-tabs": "1.0.1",
     "@sentry/nextjs": "7.13.0",
     "@socialgouv/matomo-next": "1.4.0",
