--- a/apps/backend-sls/package.json
+++ b/apps/backend-sls/package.json
@@ -35,7 +35,7 @@
     "cookie-parser": "1.4.6",
     "express": "4.18.2",
     "graphql": "16.6.0",
-    "ioredis": "5.2.3",
+    "ioredis": "5.2.4",
     "jsonwebtoken": "8.5.1",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0"
@@ -62,14 +62,14 @@
     "ioredis-mock": "8.2.2",
     "jest": "29.2.1",
     "npm-run-all": "4.1.5",
-    "prettier": "2.7.1",
-    "prettier-plugin-organize-imports": "3.1.1",
-    "prisma": "4.5.0",
+    "prettier": "2.8.0",
+    "prettier-plugin-organize-imports": "3.2.1",
+    "prisma": "4.6.1",
     "size-limit": "8.1.0",
     "supertest": "6.3.0",
     "ts-jest": "29.0.3",
-    "tslib": "2.4.0",
-    "typescript": "4.8.4"
+    "tsup": "6.5.0",
+    "typescript": "4.9.3"
   },
   "volta": {
     "extends": "../../package.json"
