--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -7,21 +7,21 @@
     "dev": "tailwindcss -i src/globals.css -o src/tailwind.css -w",
     "build": "tailwindcss -i src/globals.css -o src/tailwind.css"
   },
-  "dependencies": {
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.3",
-    "@tailwindcss/line-clamp": "0.4.2",
-    "@tailwindcss/typography": "0.5.7",
-    "@fortawesome/free-solid-svg-icons": "6.2.0",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "@uzh-bf/design-system": "0.0.88",
-    "dayjs": "1.11.6",
-    "ramda": "0.28.0",
-    "react": "18.2.0",
-    "tailwind-merge": "1.8.0",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.9.3",
-    "yup": "0.32.11"
+  "peerDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uzh-bf/design-system": "^0.0.88",
+    "dayjs": "^1.11.6",
+    "ramda": "^0.28.0",
+    "react": "^18.2.0",
+    "tailwind-merge": "^1.8.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "yup": "^1.0.0-beta.7"
   },
   "volta": {
     "extends": "../../package.json"
