--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "tailwindcss -i src/globals.css -o src/tailwind.css -w",
-    "build": "tailwindcss -i src/globals.css -o src/tailwind.css"
+    "build": "tailwindcss -i src/globals.css -o src/tailwind.css",
+    "format": "prettier --write ."
   },
   "peerDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
