--- a/packages/prisma/.env.template
+++ b/packages/prisma/.env.template
@@ -1,2 +1,3 @@
 DATABASE_URL="postgres://klicker:klicker@localhost:5432/main"
 SHADOW_DATABASE_URL="postgres://klicker:klicker@localhost:5432/shadow"
+INITIAL_PASSWORD=abcd
