--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -12,7 +12,8 @@
     "dev:build": "NODE_ENV=development tsup --watch",
     "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'NODE_ENV=development node -r dotenv/config dist/index.js'",
     "build": "NODE_ENV=production tsup",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "start": "node -r dotenv/config dist/index.js"
   },
   "engines": {
     "node": "=18"
