--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development next dev --port 3002",
     "build": "next build",
     "format": "prettier --write .",
-    "start": "next start",
+    "start": "next start --port 3002",
     "lint": "next lint"
   },
   "dependencies": {
