--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -1,10 +1,12 @@
-COOKIE_DOMAIN=klicker.uzh.ch
-API_DOMAIN=backend-sls.$COOKIE_DOMAIN
+COOKIE_DOMAIN=127.0.0.1
+API_DOMAIN=$COOKIE_DOMAIN
 S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
-NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.$COOKIE_DOMAIN/api/AddResponse"
-NEXT_PUBLIC_API_URL="https://backend-sls.$COOKIE_DOMAIN/api/graphql"
-NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
+NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
+NEXT_PUBLIC_API_URL="http://127.0.0.1:3000/api/graphql"
+NEXT_PUBLIC_API_URL_SSR=$NEXT_PUBLIC_API_URL
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
+
+APP_SECRET=abcd
