--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "release:beta": "standard-version --prerelease beta --no-verify",
     "release:beta:dry": "standard-version --dry-run --prerelease beta",
     "release:rc": "standard-version --prerelease rc --no-verify",
-    "release:rc:dry": "standard-version --dry-run --prerelease rc"
+    "release:rc:dry": "standard-version --dry-run --prerelease rc",
+    "test": "cypress open",
+    "start": "turbo run start"
   },
   "devDependencies": {
+    "cypress": "^11.2.0",
     "standard-version": "9.5.0",
     "turbo": "1.6.3",
     "yaml": "2.1.3"
