--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -5,8 +5,49 @@ on:
       - 'Klicker-Testing'
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
-  build:
+  build-backend:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}/backend-docker
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: apps/backend-docker
+          file: apps/backend-docker/Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: cypress
+          labels: ${{ steps.meta.outputs.labels }}
+
+  build-frontend-manage:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -40,7 +81,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository }}/frontend-manage
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
