jobs should run sequentially now

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -93,6 +93,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   checkout-and-test:
+    needs:
+      - build-backend
+      - build-frontend-manage
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
