--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -40,11 +40,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
           context: apps/backend-docker
           file: apps/backend-docker/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: cypress
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}/backend-docker:cypress
           labels: ${{ steps.meta.outputs.labels }}
 
   build-frontend-manage:
@@ -72,6 +70,7 @@ jobs:
       - name: Log into registry ${{ env.REGISTRY }}
         uses: docker/login-action@v2
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -86,8 +85,7 @@ jobs:
         with:
           context: apps/frontend-manage
           file: apps/frontend-manage/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: cypress
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}/frontend-manage:cypress
           labels: ${{ steps.meta.outputs.labels }}
 
   # fill-database:
