chore: add achievements seed

--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -29,10 +29,11 @@
     "prisma:studio:qa": "dotenv -e .env.qa -- npm run prisma:studio",
     "prisma:studio:prod": "dotenv -e .env.production -- npm run prisma:studio",
     "preseed": "npm run build",
-    "seed": "npm-run-all seed:bf1 seed:ami seed:test",
+    "seed": "npm-run-all seed:bf1 seed:ami seed:test seed:achievements",
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
+    "seed:achievements": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts",
     "seed:qa": "ENV=development npm-run-all seed:qa:bf1 seed:qa:ami",
     "seed:qa:bf1": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts dotenv_config_path=.env.qa",
     "seed:qa:ami": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts dotenv_config_path=.env.qa",
