--- a/apps/frontend-pwa/.gitignore
+++ b/apps/frontend-pwa/.gitignore
@@ -35,7 +35,7 @@ yarn-error.log*
 *.tsbuildinfo
 
 # PWA
-public/sw.js*
+public/sw*.js*
 public/workbox-*.js*
 public/fallback*.js*
 public/worker*.js
